--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
         dotnet-version: 3.1.x
 
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore ./HelperAPI/HelperAPI.sln
 
     - name: Build
       run: dotnet build --no-restore
