--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [ "develop","main" ]
   
+env:
+  SOURCE_DIR: ./HelperAPI/HelperAPI
+
 
 jobs:
   build:
@@ -20,11 +23,13 @@ jobs:
         dotnet-version: 3.1.x
 
     - name: Restore dependencies
-      run: cd ./HelperAPI && dotnet restore
+      run: dotnet restore
+      working-directory: ${{SOURCE_DIR}}
 
     - name: Build 
       run: dotnet build --no-restore
-      working-directory: ./HelperAPI/HelperAPI
+      working-directory: ${{SOURCE_DIR}}
 
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      working-directory: ${{SOURCE_DIR}}
