--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -14,8 +14,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Build Image
+    - name: Install Buildx
       uses: docker/setup-buildx-action@v2.2.1
+      
+    - name: Build Image
+      uses: docker/build-push-action@v3.3.0
         
     
 
