--- a/HelperAPI/HelperAPI/Properties/launchSettings.json
+++ b/HelperAPI/HelperAPI/Properties/launchSettings.json
@@ -11,33 +11,23 @@
   "profiles": {
 
     "IIS Express": {
-
-      "commandName": "IISExpress",
-
+      "commandName": "IISExpress",  
       "launchBrowser": true,
-
       "environmentVariables": {
-
         "ASPNETCORE_ENVIRONMENT": "Development"
-
       }
-
     },
 
     "HelperAPI": {
-
       "commandName": "Project",
-
       "launchBrowser": true,
-
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
-
+      "launchUrl" : "swagger", 
       "environmentVariables": {
-
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     },
+
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
@@ -45,15 +35,7 @@
       "publishAllPorts": true,
       "useSSL": true
     }
-  },
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:30119",
-      "sslPort": 44344
-    }
-
   }
+  
 
 }
