--- a/HelperAPI/HelperAPI/appsettings.json
+++ b/HelperAPI/HelperAPI/appsettings.json
@@ -1,10 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+  "Project": {
+
+    "ConnectionString": "Data Source=DESKTOP-O53D1QD; Database=Integral; Persist Security Info=false; User ID='sa'; Password='sa'; MultipleActiveResultSets=True; Trusted_Connection=False;",
+    "CompanyName": "Integral",
+    "CompanyPhone": "+375 (29) 873 84 82",
+    "CompanyPhoneShort": "+375298738482",
+    "CompanyEmail": "dima.icigo8@gmail.com"
+  }
 }
